--- a/project.json
+++ b/project.json
@@ -10,13 +10,14 @@
     "UiPath.PDF.Activities": "[3.2.2]",
     "UiPath.System.Activities": "[24.3.1]",
     "UiPath.Testing.Activities": "[23.10.1]",
-    "UiPath.UIAutomation.Activities": "[23.10.13]"
+    "UiPath.UIAutomation.Activities": "[23.10.13]",
+    "UiPathTeam.ImagesToPDF.Activities": "[1.0.14]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.4.5.0",
-  "projectVersion": "1.0.1-alpha.1",
+  "projectVersion": "1.0.1-alpha.3",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
